Closed Bug 1432915 Opened 8 years ago Closed 8 years ago

Do not write the kMDItemWhereFroms xattr metadata for files downloaded in Private Browsing mode

Categories

(Firefox :: Private Browsing, defect, P1)

51 Branch
defect

Tracking

()

VERIFIED FIXED
Firefox 60
Tracking Status
firefox-esr52 --- wontfix
firefox58 --- wontfix
firefox59 --- verified
firefox60 --- verified

People

(Reporter: ehsan.akhgari, Assigned: groovecoder)

References

Details

(Keywords: regression, Whiteboard: [tor])

Attachments

(1 file)

This is related to bug 1374027. In PB mode, we definitely should stop writing this xattr to disk when downloading files, whether or not we add an about:config flag to control the behavior outside of PB mode.
Marking this P1 and assigning to myself. I have a 1-line fix patch ready already, but I could use some advice if (and where) we can write the Mac-specific test for this.
Assignee: nobody → lcrouch
Component: File Handling → Private Browsing
Priority: -- → P1
Attachment #8946703 - Flags: review?(ehsan)
Comment on attachment 8946703 [details] Bug 1432915 - don't save download source url when aIsPrivate https://reviewboard.mozilla.org/r/216676/#review222514 Thanks!
Attachment #8946703 - Flags: review?(ehsan) → review+
Pushed by eakhgari@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/91c18ad31b29 don't save download source url when aIsPrivate r=Ehsan
Status: NEW → RESOLVED
Closed: 8 years ago
Resolution: --- → FIXED
Target Milestone: --- → Firefox 60
Comment on attachment 8946703 [details] Bug 1432915 - don't save download source url when aIsPrivate Approval Request Comment [Feature/Bug causing the regression]: https://bugzilla.mozilla.org/show_bug.cgi?id=337051 [User impact if declined]: Mac users' private browsing history leaks to disk when they download a file in private browsing; esp. bad for users of "Always use Private Browsing" [Is this code covered by automated tests?]: no [Has the fix been verified in Nightly?]: yes [Needs manual test from QE? If yes, steps to reproduce]: (On Mac OS) Open Private Browsing Download a file in the private browsing window Right-click the downloaded file, choose "Get Info" from the context menu Expected results: There should be no "Where From" value in the info [List of other uplifts needed for the feature/fix]: none [Is the change risky?]: no [Why is the change risky/not risky?]: 1-line variable check change [String changes made/needed]: none
Attachment #8946703 - Flags: approval-mozilla-beta?
Whiteboard: [tor]
Blocks: 337051
Flags: qe-verify+
Keywords: regression
Version: unspecified → 51 Branch
Comment on attachment 8946703 [details] Bug 1432915 - don't save download source url when aIsPrivate One-liner privacy fix. Taking for 59b8.
Attachment #8946703 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Mozilla/5.0 (Macintosh; Intel Mac OS X 10.12; rv:59.0) Gecko/20100101 Firefox/59.0 Build ID:2018020818154 Reproduced the issue on Nightly (2018-01-24) using the STR from comment 6. Verified fixed using Nightly 60.0a1 (2018-02-09) and Firefox Beta 59.0b8 on Mac OS X 10.12.
Status: RESOLVED → VERIFIED
Flags: qe-verify+
Flags: in-qa-testsuite+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: