Bug 1432915 - don't save download source url when aIsPrivate r=Ehsan

MozReview-Commit-ID: 9mQjwcCtrWg